apply robolectric and dependencies